rx/build/log/idf_py_stdout_output_25615
Command: ninja flash
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/davey_schoe/esp/mcmb_tx_dv3/build/bootloader/esp-idf/esptool_py && /home/davey_schoe/.espressif/python_env/idf5.5_py3.11_env/bin/python /home/davey_schoe/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/davey_schoe/esp/mcmb_tx_dv3/build/bootloader/bootloader.bin
Bootloader binary size 0x6600 bytes. 0xa00 bytes (9%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/src/CMakeFiles/__idf_src.dir/r.c.obj
FAILED: esp-idf/src/CMakeFiles/__idf_src.dir/r.c.obj 
/home/davey_schoe/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-1428-g0f0068fff3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/davey_schoe/esp/mcmb_tx_dv3/build/config -I/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/include -I/home/davey_schoe/esp/esp-idf/components/newlib/platform_include -I/home/davey_schoe/esp/esp-idf/components/freertos/config/include -I/home/davey_schoe/esp/esp-idf/components/freertos/config/include/freertos -I/home/davey_schoe/esp/esp-idf/components/freertos/config/xtensa/include -I/home/davey_schoe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/davey_schoe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/davey_schoe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/davey_schoe/esp/esp-idf/components/freertos/esp_additions/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/include/soc -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/dma/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/davey_schoe/esp/esp-idf/components/heap/include -I/home/davey_schoe/esp/esp-idf/components/heap/tlsf -I/home/davey_schoe/esp/esp-idf/components/log/include -I/home/davey_schoe/esp/esp-idf/components/soc/include -I/home/davey_schoe/esp/esp-idf/components/soc/esp32 -I/home/davey_schoe/esp/esp-idf/components/soc/esp32/include -I/home/davey_schoe/esp/esp-idf/components/soc/esp32/register -I/home/davey_schoe/esp/esp-idf/components/hal/platform_port/include -I/home/davey_schoe/esp/esp-idf/components/hal/esp32/include -I/home/davey_schoe/esp/esp-idf/components/hal/include -I/home/davey_schoe/esp/esp-idf/components/esp_rom/include -I/home/davey_schoe/esp/esp-idf/components/esp_rom/esp32/include -I/home/davey_schoe/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/davey_schoe/esp/esp-idf/components/esp_rom/esp32 -I/home/davey_schoe/esp/esp-idf/components/esp_common/include -I/home/davey_schoe/esp/esp-idf/components/esp_system/include -I/home/davey_schoe/esp/esp-idf/components/esp_system/port/soc -I/home/davey_schoe/esp/esp-idf/components/esp_system/port/include/private -I/home/davey_schoe/esp/esp-idf/components/xtensa/esp32/include -I/home/davey_schoe/esp/esp-idf/components/xtensa/include -I/home/davey_schoe/esp/esp-idf/components/xtensa/deprecated_include -I/home/davey_schoe/esp/esp-idf/components/lwip/include -I/home/davey_schoe/esp/esp-idf/components/lwip/include/apps -I/home/davey_schoe/esp/esp-idf/components/lwip/include/apps/sntp -I/home/davey_schoe/esp/esp-idf/components/lwip/lwip/src/include -I/home/davey_schoe/esp/esp-idf/components/lwip/port/include -I/home/davey_schoe/esp/esp-idf/components/lwip/port/freertos/include -I/home/davey_schoe/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/davey_schoe/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/davey_schoe/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/davey_schoe/esp/esp-idf/components/esp_driver_gpio/include -I/home/davey_schoe/esp/esp-idf/components/esp_event/include -I/home/davey_schoe/esp/esp-idf/components/esp_eth/include -I/home/davey_schoe/esp/esp-idf/components/esp_driver_spi/include -I/home/davey_schoe/esp/esp-idf/components/esp_pm/include -I/home/davey_schoe/esp/esp-idf/components/esp_netif/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/davey_schoe/esp/mcmb_tx_dv3=. -fmacro-prefix-map=/home/davey_schoe/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/src/CMakeFiles/__idf_src.dir/r.c.obj -MF esp-idf/src/CMakeFiles/__idf_src.dir/r.c.obj.d -o esp-idf/src/CMakeFiles/__idf_src.dir/r.c.obj -c /home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c: In function 'r_select_task':
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:94:25: error: expected expression before '}' token
   94 |                         }
      |                         ^
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c: At top level:
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:109:1: error: expected identifier or '(' before '}' token
  109 | }
      | ^
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c: In function 'r_conn':
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:165:11: error: 's' undeclared (first use in this function)
  165 |     fcntl(s,F_SETFL,f);
      |           ^
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:165:11: note: each undeclared identifier is reported only once for each function it appears in
[5/11] Building C object esp-idf/src/CMakeFiles/__idf_src.dir/m.c.obj
In file included from /home/davey_schoe/esp/mcmb_tx_dv3/lwmb/include/h.h:17,
                 from /home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/m.c:1:
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/m.c: In function 'm_process_task':
/home/davey_schoe/esp/esp-idf/components/log/include/esp_log.h:220:65: warning: pointer 'v8' used after 'free' [-Wuse-after-free]
  220 |         else if (ESP_LOG_GET_LEVEL(configs)==ESP_LOG_DEBUG)   { esp_log(ESP_LOG_CONFIG_INIT(ESP_LOG_DEBUG),   tag, LOG_FORMAT(D, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/davey_schoe/esp/esp-idf/components/log/include/esp_log.h:163:94: note: in expansion of macro 'ESP_LOG_LEVEL'
  163 | #define ESP_LOG_LEVEL_LOCAL(configs, tag, format, ...) do { if (_ESP_LOG_ENABLED(configs)) { ESP_LOG_LEVEL(configs, tag, format, ##__VA_ARGS__); } } while(0)
      |                                                                                              ^~~~~~~~~~~~~
/home/davey_schoe/esp/esp-idf/components/log/include/esp_log.h:127:41: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  127 | #define ESP_LOGD(tag, format, ...) do { ESP_LOG_LEVEL_LOCAL(ESP_LOG_DEBUG, tag, format, ##__VA_ARGS__); } while(0)
      |                                         ^~~~~~~~~~~~~~~~~~~
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/m.c:264:25: note: in expansion of macro 'ESP_LOGD'
  264 |                         ESP_LOGD(TAG,"m_process_task: free(%p)",v8);
      |                         ^~~~~~~~
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/m.c:263:25: note: call to 'free' here
  263 |                         free(v8);
      |                         ^~~~~~~~
ninja: build stopped: subcommand failed.
